#
# Makefile.am for devtools/devtools/skeletons/config/src
#

yncludedir = @yncludedir@/openteam

client_DATA =			\
	openteam.ycp		\
	openteam_auto.ycp	\
	openteam_proposal.ycp	\
	openteam_write.ycp

ynclude_DATA =			\
	helps.ycp		\
	wizards.ycp		\
	dialogs.ycp		\
	complex.ycp		\
	routines.ycp

config_DATA =			\
	openteam.y2cc

module_DATA =			\
	Openteam.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA)
